--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,16 @@
     ],
     "type": "composer-plugin",
     "require": {
-		"php": ">=7.1"
+		"php": ">=7.1",
+        "oneup/flysystem-bundle": "2.0.1",
+        "php-http/guzzle6-adapter": "^1.1"
     },
     "require-dev": {
 		"phpunit/phpunit": "6.*"
     },
     "autoload": {
         "psr-4": {
-            "pcode\\Template\\": "src/"
+            "PCode\\GoogleFontDownloader\\": "src/"
         }
     }
 }
