--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,28 @@
             "email": "office@pcode.at"
         }
     ],
+    "support": {
+        "email": "office@pcode.at",
+        "irc": "irc://irc.pcode.at/composer"
+    },
     "type": "composer-plugin",
     "require": {
-		"php": ">=7.1",
+        "ext-json": "*"
+    },
+    "require-dev": {
+        "php": ">=7.1",
+		"phpunit/phpunit": "6.*",
         "oneup/flysystem-bundle": "2.0.1",
         "php-http/guzzle6-adapter": "^1.1"
     },
-    "require-dev": {
-		"phpunit/phpunit": "6.*"
+    "repositories": {
+        "dev-package": {
+            "type": "path",
+            "url": "https://github.com/pcode-at/google-font-downloader.git",
+            "options": {
+                "symlink": true
+            }
+        }
     },
     "autoload": {
         "psr-4": {
