--- a/composer.json
+++ b/composer.json
@@ -27,5 +27,8 @@
         "psr-4": {
             "PCode\\GoogleFontDownloader\\": "src/"
         }
+    },
+    "extra": {
+        "class": "PCode\\GoogleFontDownloader"
     }
 }
