--- a/docker/docker-symfony/docker-compose.yml
+++ b/docker/docker-symfony/docker-compose.yml
@@ -9,8 +9,8 @@ services:
         volumes:
             - ${SYMFONY_APP_PATH}:/var/www/symfony
             - ./logs/symfony:/var/www/symfony/app/logs
-    nginx:
-        build: nginx
+    nginxcomp:
+        build: nginxcomp
         ports:
             - 80:80
         volumes_from:
