--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,6 @@
     },
     "autoload": {
         "psr-4": { "PCode\\GoogleFontDownloader\\": "src/" },
-        "classmap": [ "Lib/Downloader.php"]
+        "classmap": [ "src/Lib/Downloader.php"]
     }
 }
