--- a/docker/docker-symfony/docker-compose.yml
+++ b/docker/docker-symfony/docker-compose.yml
@@ -9,11 +9,11 @@ services:
         volumes:
             - ${SYMFONY_APP_PATH}:/var/www/symfony
             - ./logs/symfony:/var/www/symfony/app/logs
-    nginxcomp:
-        build: nginxcomp
+    nginx:
+        build: nginx
         ports:
             - 80:80
         volumes_from:
             - phpcomp
         volumes:
-            - ./logs/nginx/:/var/log/nginx
+            - ./logs/nginxcomp/:/var/log/nginx
