--- a/docker/docker-symfony/docker-compose.yml
+++ b/docker/docker-symfony/docker-compose.yml
@@ -1,19 +1,19 @@
 version: '2'
 
 services:
-    phpcomp:
+    php:
         build:
             context: php7-fpm
             args:
                 TIMEZONE: ${TIMEZONE}
         volumes:
             - ${SYMFONY_APP_PATH}:/var/www/symfony
-            - ./logs/symfony:/var/www/symfony/app/logs
+            - ./logs/symfony_comp:/var/www/symfony/app/logs
     nginx:
         build: nginx
         ports:
             - 80:80
         volumes_from:
-            - phpcomp
+            - php
         volumes:
-            - ./logs/nginxcomp/:/var/log/nginx
+            - ./logs/nginx_comp/:/var/log/nginx
