--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,17 @@
     },
     "require-dev": {
         "php": ">=7.1",
-		"phpunit/phpunit": "6.*",
+		"phpunit/phpunit": "^7.0",
         "oneup/flysystem-bundle": "2.0.1",
         "php-http/guzzle6-adapter": "^1.1"
     },
     "autoload": {
         "psr-4": { "PCode\\GoogleFontDownloader\\": "src/" }
+    },
+    "autoload-dev": {
+        "psr-4": { "PCode\\GoogleFontDownloader\\": "tests/" }
+    },
+    "scripts": {
+        "test": "phpunit --colors=always"
     }
 }
