Modify composer install workflow.

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,11 @@
 {
     "name": "pcode/google-font-downloader",
     "description": "Composer package google-font-downloader",
-    "keywords": ["symfony", "composer", "php"],
+    "keywords": [
+        "symfony",
+        "composer",
+        "php"
+    ],
     "license": "MIT",
     "authors": [
         {
@@ -18,17 +22,21 @@
     },
     "require-dev": {
         "php": ">=7.1",
-		"phpunit/phpunit": "^7.0",
+        "phpunit/phpunit": "^7.0",
         "oneup/flysystem-bundle": "2.0.1",
         "php-http/guzzle6-adapter": "^1.1"
     },
     "autoload": {
-        "psr-4": { "PCode\\GoogleFontDownloader\\": "src/" }
+        "psr-4": {
+            "PCode\\GoogleFontDownloader\\": "src/"
+        }
     },
     "autoload-dev": {
-        "psr-4": { "PCode\\GoogleFontDownloader\\": "tests/" }
+        "psr-4": {
+            "PCode\\GoogleFontDownloader\\": "tests/"
+        }
     },
     "scripts": {
-        "test": "phpunit --colors=always"
+        "test": "phpunit --colors=always --testdox"
     }
 }
