--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -9,10 +9,9 @@ jobs:
         strategy:
             matrix:
                 php: [7,1, 5.6]
-                dependency-version: [prefer-lowest, prefer-stable]
                 os: [ubuntu-latest, windows-latest]
         
-        name: P${{ matrix.php }} - ${{ matrix.dependency-version }} - ${{ matrix.os }}
+        name: P${{ matrix.php }} - ${{ matrix.os }}
         
         steps:
             -   name: Checkout code
@@ -26,7 +25,7 @@ jobs:
                     coverage: none
             
             -   name: Install dependencies
-                run: composer install --${{ matrix.dependency-version }} --prefer-dist --no-interaction --no-suggest
+                run: composer install --no-interaction --no-suggest
             
             -   name: Execute tests
-                run: vendor/bin/phpunit
+                run: composer test
