--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,10 +8,10 @@ jobs:
         
         strategy:
             matrix:
-                php: [7,1, 5.6]
-                os: [ubuntu-latest, windows-latest]
+                php: [7.1, 5.6]
+                os: [ubuntu-latest]
         
-        name: P${{ matrix.php }} - ${{ matrix.os }}
+        name: PHP ${{ matrix.php }} - ${{ matrix.os }}
         
         steps:
             -   name: Checkout code
