--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,13 @@
         "irc": "irc://irc.pcode.at/composer"
     },
     "require": {
-        "ext-json": "*"
+        "php": ">=5.6",
+        "ext-json": "*",
+        "guzzlehttp/guzzle": "^6.0",
+        "league/flysystem": "^1.0"
     },
     "require-dev": {
-        "php": ">=7.1",
-        "phpunit/phpunit": "^7.0",
-        "oneup/flysystem-bundle": "2.0.1",
-        "php-http/guzzle6-adapter": "^1.1"
+        "phpunit/phpunit": "^5.7"
     },
     "autoload": {
         "psr-4": {
