--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,11 @@
 {
     "name": "pcode/google-font-downloader",
     "description": "Composer package google-font-downloader",
-    "keywords": ["symfony", "composer", "php"],
+    "keywords": [
+        "symfony",
+        "composer",
+        "php"
+    ],
     "license": "MIT",
     "authors": [
         {
@@ -14,21 +18,25 @@
         "irc": "irc://irc.pcode.at/composer"
     },
     "require": {
-        "ext-json": "*"
+        "php": ">=5.6",
+        "ext-json": "*",
+        "guzzlehttp/guzzle": "^6.0",
+        "league/flysystem": "^1.0"
     },
     "require-dev": {
-        "php": ">=7.1",
-		"phpunit/phpunit": "^7.0",
-        "oneup/flysystem-bundle": "2.0.1",
-        "php-http/guzzle6-adapter": "^1.1"
+        "phpunit/phpunit": "^5.7"
     },
     "autoload": {
-        "psr-4": { "PCode\\GoogleFontDownloader\\": "src/" }
+        "psr-4": {
+            "PCode\\GoogleFontDownloader\\": "src/"
+        }
     },
     "autoload-dev": {
-        "psr-4": { "PCode\\GoogleFontDownloader\\": "tests/" }
+        "psr-4": {
+            "PCode\\GoogleFontDownloader\\": "tests/"
+        }
     },
     "scripts": {
-        "test": "phpunit --colors=always"
+        "test": "phpunit --colors=always --testdox"
     }
 }
