--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,7 +8,7 @@ jobs:
         
         strategy:
             matrix:
-                php: [7.1, 5.6]
+                php: [7.1, 7.3, 7.4, 5.6]
                 os: [ubuntu-latest]
         
         name: PHP ${{ matrix.php }} - ${{ matrix.os }}
